--- a/index.html
+++ b/index.html
@@ -117,6 +117,53 @@
       <p>&copy; 2024 Anggita Rahmania. Dibuat dengan 💖 untuk dunia.</p>
     </footer>
   </div>
+
+  <!-- Menambahkan JSON di bawah body -->
+  <script type="application/json" id="profileData">
+    {
+      "name": "Anggita Rahmania",
+      "university": "Universitas Yatsi Madani",
+      "major": "Ilmu Komputer",
+      "semester": 3,
+      "skills": [
+        "Pengembangan perangkat lunak",
+        "Teknologi web",
+        "React",
+        "JavaScript",
+        "HTML/CSS"
+      ],
+      "hobbies": [
+        "Masak",
+        "Olahraga",
+        "Jajan",
+        "Travelling"
+      ],
+      "education": [
+        {
+          "school": "SDN Kaduagung II",
+          "years": "2011 - 2017"
+        },
+        {
+          "school": "SMP Negeri 3 Tigaraksa",
+          "years": "2017 - 2020"
+        },
+        {
+          "school": "SMA Negeri 18 Kab. Tangerang",
+          "years": "2020 - 2023"
+        }
+      ],
+      "workExperience": [
+        {
+          "jobTitle": "Barista",
+          "company": "Kedai Kopi ABC"
+        },
+        {
+          "jobTitle": "Staff Notaris",
+          "company": "Notaris XYZ"
+        }
+      ]
+    }
+  </script>
 </body>
 
 </html>
